--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
 keywords: AgStack, agriculture, digital transfotmation # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: /assests/img/agstack-logo # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: agstack-logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://agstack.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
