Add AgStack to copyright statement in footer.
May need to change this to LF, but at least it's in a config var now so that'll be easy.

#58

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: The AgStack Foundation # the website title (if blank, full name will be used instead)
-first_name:
-middle_name:
-last_name:
-email:
+owner: The AgStack Foundation
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Guides, projects, and resources that have information about the AgStack team and their efforts.
 footer_text: >
