--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,15 @@ owner: The AgStack Foundation
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Guides, projects, and resources that have information about the AgStack team and their efforts.
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+  footer
 keywords: AgStack, agriculture, digital transformation # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: agstack-logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
-
+blog_nav_title: News
 url: https://agstack.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
