--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   footer
 keywords: AgStack, agriculture, digital transformation # add your own keywords or leave empty
-
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: agstack-logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: icon/color/agstack-icon-color.svg # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 blog_nav_title: News
 url: https://agstack.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
@@ -22,13 +21,17 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 # Theme
 # -----------------------------------------------------------------------------
 
+#theme: 'jekyll-agency'
+#theme: jekyll-theme-so-simple
+#theme: jekyll-text-theme
+
 # code highlighter theme
-highlight_theme_light: github   # https://github.com/jwarby/jekyll-pygments-themes
-highlight_theme_dark: native    # https://github.com/jwarby/jekyll-pygments-themes
+#highlight_theme_light: github   # https://github.com/jwarby/jekyll-pygments-themes
+#highlight_theme_dark: native    # https://github.com/jwarby/jekyll-pygments-themes
 
 # repo color theme
-repo_theme_light: default       # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
-repo_theme_dark: dark           # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
+#repo_theme_light: default       # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
+#repo_theme_dark: dark           # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -38,7 +41,7 @@ navbar_fixed: true
 footer_fixed: true
 
 # Dimensions
-max_width: 800px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -98,7 +101,7 @@ collections:
     defaults:
       layout: page
     output: true
-    permalink: /:path/
+    permalink: /projects/:title
 
 news_scrollable: true # adds a vertical scroll bar if there are more than 3 news items
 news_limit: 10 # leave blank to include all the news in the `_news` folder
