--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,6 @@
 main:
+  - title: "News"
+    url: /news
   - title: "Projects"
     url: /agstack-projects
   - title: "Membership"
@@ -9,7 +11,7 @@ main:
     url: /governance
   - title: "Contribute"
     url: /contribute
-  - title: "Contact"
-    url: /contact
   - title: "About"
     url: /about
+  - title: "Contact"
+    url: /contact
