--- a/_config.yml
+++ b/_config.yml
@@ -73,22 +73,46 @@ include:
   - _projects
   - _posts
 
+# Pagination with jekyll-paginate
+paginate: 10 # number of posts to show
+paginate_path: /page:num/
+
+# Pagination with jekyll-paginate-v2
+# See https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
+#   for configuration details
+pagination:
+  # Set enabled to true to use paginate v2
+  enabled: false
+  debug: false
+  collection: 'posts'
+  per_page: 10
+  permalink: '/page/:num/'
+  title: ':title - page :num'
+  limit: 0
+  sort_field: 'date'
+  sort_reverse: true
+  category: 'posts'
+  tag: ''
+  locale: ''
+  trail:
+    before: 2
+    after: 2
+
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-include-cache
 
 # Front Matter Defaults
 defaults:
   - scope:
-      path: "_news"
-      type: news
+        path: "_posts"
     values:
-      layout: single
-      classes: wide
-      author_profile: false
-      share: false
+        layout: single
+        share: false
+        permalink: /news/:year/:month/:title:output_ext
   - scope:
       path: "_pages"
       type: pages
@@ -101,12 +125,6 @@ defaults:
     values:
       layout: single
       classes: wide
-
-# For news and blog posts
-collections:
-  news:
-    output: true
-    permalink: /:collection/:year/:month/:title:output_ext
 
 # Site Author
 author:
